# grpc-forge

./: Cargo.toml  README.md  flake.nix
src/: main.rs  proto.rs  scaffold.rs
